# ansi_colle.linux

./: .gitignore  .markdownlint.yaml  .nvim.lua  .pdm-python  CHANGELOG.md  CHANGELOG.rst  Jenkinsfile  README.md  ansible.cfg  galaxy.yml  pyproject.toml  pytest.ini  requirements.yml  util.py
.github/workflows/: ansible-lint.yml  ansible.yml
changelogs/: changelog.yaml  config.yaml  minor_changes.yaml
changelogs/fragments/: major_changes.yaml
extensions/molecule/default/: converge.yml  molecule.yml
playbooks/: install.yml  linux.yml  site.yml  wsl.yml
playbooks/group_vars/: debian.yml  redhat.yml
roles/ansible/: README.md
roles/ansible/meta/: main.yml
roles/ansible/tasks/: main.yml
roles/arkade/meta/: main.yml
roles/arkade/tasks/: main.yml
roles/containers/: README.md
roles/containers/meta/: main.yml
roles/containers/tasks/: main.yml
roles/dev_tools/: README.md
roles/dev_tools/defaults/: main.yml
roles/dev_tools/files/: gpg-agent.conf  gpg.conf
roles/dev_tools/meta/: argument_specs.yml  main.yml
roles/dev_tools/tasks/: _fedora.yml  _gpg.yml  _neovim.yml  _ubuntu.yml  _vscode.yml  main.yml
roles/ergo/defaults/: main.yml
roles/ergo/files/: ergo.service
roles/ergo/handlers/: main.yml
roles/ergo/meta/: main.yml
roles/ergo/tasks/: main.yml
roles/flatpak/meta/: main.yml
roles/flatpak/tasks/: main.yml
roles/golang/meta/: argument_specs.yml  main.yml
roles/golang/tasks/: main.yml
roles/home_config/files/: aliases.bash  bashrc.bash  gitconfig  gitignore  profile.sh
roles/home_config/meta/: main.yml
roles/home_config/tasks/: _redhat.yml  main.yml
roles/home_config/tests/: test_linux_home.py
roles/kopia/: README.md
roles/kopia/meta/: main.yml
roles/kopia/tasks/: main.yml
roles/kuro/: README.md
roles/kuro/defaults/: main.yml
roles/kuro/meta/: main.yml
roles/kuro/tasks/: main.yml
roles/lang/: README.md
roles/lang/defaults/: main.yml
roles/lang/meta/: main.yml
roles/lang/tasks/: main.yml
roles/npm/meta/: main.yml
roles/npm/tasks/: main.yml
roles/powershell/: README.md
roles/powershell/defaults/: main.yml
roles/powershell/files/: profile.ps1
roles/powershell/meta/: main.yml
roles/powershell/tasks/: main.yml
roles/python/: README.md
roles/python/defaults/: main.yml
roles/python/meta/: argument_specs.yml  main.yml
roles/python/tasks/: _pyenv.yml  main.yml
roles/sys_config/meta/: main.yml
(+13 files in other folders)
