[project]
name = "ansi_colle-linux"
dynamic = ["version"]  # Check galaxy.yml for version
description = "Default template for PDM package"
authors = [
    {name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com"},
]
dependencies = [
    "ansible>=9.2.0",
    "tomli-w>=1.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
install = "ansible-playbook ansi_colle.linux.install"
run = "ansible-playbook ansi_colle.linux.linux --ask-become-pass --inventory"
changelog = "git-cliff --prepend CHANGELOG.md --unreleased --tag"

[tool.pdm.version]
source = "scm"

