[project]
name = "ansi_colle-linux"
dynamic = ["version"]  # Check galaxy.yml for version
description = "Default template for PDM package"
authors = [
    {name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com"},
]
dependencies = [
    "ansible>=9.2.0",
    "tomli-w>=1.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
  "ansible-lint"
]
doc = [
  "antsibull-docs"
]
test = [
  "ansible-dev-tools",
]

[tool.pdm.resolution.overrides]
will-not-work-on-windows-try-from-wsl-instead = "0.1.0"  # ignore ansible-lint install error

[tool.pdm]
distribution = false

[tool.pdm.scripts]
install = "ansible-playbook ansi_colle.linux.install"
exec = "ansible-playbook ansi_colle.linux.linux --ask-become-pass --inventory"
changelog = "git-cliff --prepend CHANGELOG.md --unreleased --tag"

[tool.pdm.version]
source = "scm"

